# site

./: README.md  dataparse.py  fetch.py  legacy  main.py  models.py  post.py  pyproject.toml  views.py
static/: bei.js  capture.js  digart.css  digart.js  layout.css  logo.css  logo.js  photocon.css  photocon.js
templates/: bei.html  digart.html  events.html  home.html  layout.html  login.html  logo.html  photocon.html
templates/events/: capture.html  logo.html  photocon.html
