[tool.poetry]
name = "sundersiteproto"
version = "0.1.0"
description = ""
authors = ["AbhigyanDas <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.0"
gspread = "^3.7.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
